<resources>
    <string name="app_name">Playlist Generator</string>

    <string name="base_url">https://api.spotify.com/v1</string>
    <string name="number_of_songs">Number of songs</string>
    <string name="enter_num">enter num</string>
    <string name="energy">Energy</string>
    <string name="moodiness">Moodiness</string>
    <string name="keywords">Keywords</string>
    <string name="generate">generate</string>
    <string name="plus">+</string>
    <string name="loudness">Loudness</string>
    <string name="mood">Mood</string>
    <string name="genres">Genres</string>
    <string name="_50">50</string>


    <string name="your_playlists">Your playlists</string>
    <string name="you_need_to_log_into_your_spotify_account_to_use_this_app">You need to log into your Spotify account to use this app</string>
    <string name="loading">Loading...</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="save_playlist_to_spotify">Save playlist to Spotify</string>
    <string name="reroll">Reroll</string>
    <string name="change_cover_image">change cover image</string>
    <string name="add_to_spotify">add to spotify</string>
    <string name="playlist_cover">playlist cover</string>
    <string name="name">name</string>
    <string name="artist">artist</string>
    <string name="log_in">LOG IN</string>
    <string name="app_icon">app icon</string>
</resources>
