<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsFragment">


    <TextView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/loading"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="1dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/playlist_name"
            android:inputType="textPersonName"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/yay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText">

        </androidx.recyclerview.widget.RecyclerView>

        <Button
            android:id="@+id/yay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/spotify_green"
            android:text="@string/save_playlist_to_spotify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nay"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

        <Button
            android:id="@+id/nay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reroll"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/yay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>